--- a/bootstrap_layout/flex.html
+++ b/bootstrap_layout/flex.html
@@ -8,22 +8,37 @@
     <link rel="stylesheet" href="/style/bootstrap.min.css" />
   </head>
   <body>
-    <div class="d-flex justify-content-between ">
-      <div class="border border-3 border-success-subtle w-25">
-        <img  class="img-fluid"
-        src="/images/rooms/Single.png" alt="" />
+    <div
+      class="d-flex justify-content-around align-items-center flex-wrap"
+      style="height: 60rem"
+    >
+      <div class="border border-3 border-success-subtle  w-25 h-50">
+        <img class="img-fluid" src="/images/rooms/Single.png" alt="" />
         <h3>Single Rooms</h3>
         <p>Price 100$</p>
       </div>
-      <div class="border border-3 border-success-subtle w-25">
-        <img  class="img-fluid"
-        src="/images/rooms/Double.png" alt="" />
+      <div class="border border-3 border-success-subtle h-50 w-25">
+        <img class="img-fluid" src="/images/rooms/Double.png" alt="" />
         <h3>Double Rooms</h3>
         <p>Price 200$</p>
       </div>
-      <div class="border border-3 border-success-subtle w-25">
-        <img  class="img-fluid"
-        src="/images/rooms/Family.png" alt="" />
+      <div class="border border-3 border-success-subtle h-50 w-25">
+        <img class="img-fluid" src="/images/rooms/Family.png" alt="" />
+        <h3>Family Rooms</h3>
+        <p>Price 300$</p>
+      </div>
+      <div class="border border-3 border-success-subtle h-50 w-25">
+        <img class="img-fluid" src="/images/rooms/Family.png" alt="" />
+        <h3>Family Rooms</h3>
+        <p>Price 300$</p>
+      </div>
+      <div class="border border-3 border-success-subtle h-50 w-25">
+        <img class="img-fluid" src="/images/rooms/Family.png" alt="" />
+        <h3>Family Rooms</h3>
+        <p>Price 300$</p>
+      </div>
+      <div class="border border-3 border-success-subtle h-50 w-25">
+        <img class="img-fluid" src="/images/rooms/Family.png" alt="" />
         <h3>Family Rooms</h3>
         <p>Price 300$</p>
       </div>
